Modified my index.html and add a README file

--- a/index.html
+++ b/index.html
@@ -40,11 +40,28 @@
       <li>Asaro</li>
       <li>Fried Rice</li>
     </ol>
-
+    <!-- HTML LISTS -->
     <!-- Image element -->
-    <img src="./food (2).jpg" alt="Jollof" width="10%" />
-    <img src="./grilled suya.jpg" alt="Grilled Suya Exceptional" width="10%" />
-    <img src="./food.jpg" alt="Fried rice" width="10%" />
-    <img src="./my self.jpg" alt="Muhammad Salisu" width="10%" />
+    <img
+      src="./image folder/food (2).jpg"
+      alt="This is Jollof Rice and Chicken"
+      width="10%"
+    />
+    <img
+      src="./image folder/food.jpg"
+      alt="Fried rice and Jollof combo"
+      width="10%"
+    />
+    <img
+      src="./image folder/grilled suya.jpg"
+      alt="Grilled suya can be exceptional"
+      width="10%"
+    />
+    <img
+      src="./image folder/my self.jpg"
+      alt="The humble person behind this code"
+      width="10%"
+    />
+    <!-- Image element -->
   </body>
 </html>
