re-modified index.html

--- a/index.html
+++ b/index.html
@@ -63,5 +63,27 @@
       width="10%"
     />
     <!-- Image element -->
+    <!-- paragraph tag -->
+    <h3>DEFINITIONS</h3>
+    <p>
+      1. What is the full meaning of HTML?
+      <br />
+      It simply means "Hyper Text Mark-up Language"
+      <br />
+      2. Define HTML boiler plate.
+      <br />
+      HTML boiler plate is the basic structure,essential HTML code that is
+      required to create a web page. It is generated using the "!" on the
+      "index.html" file.
+      <br />
+      3. Differentiate between the Ordered and Unordered Lists.
+      <br />
+      Ordered list is a list of items that is formatted with a number. In HTML,
+      It is created using the "ol" element.
+      <br />
+      While the Unordered list on the other hand is a list of items that are
+      formatted with bullet points indicating each item. In HTML, It is created
+      using the "ul" element.
+    </p>
   </body>
 </html>
